fix(home): remove bottom gap

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -72,10 +72,19 @@
 }
 
 @media screen and (max-width: 1200px){
+    #home-content {
+        padding: 0;
+
+        #stories {
+            margin-top: 0;
+        }
+    }
+
     #lateral {
         display: none;
     }
 }
+
 @media screen and (min-width: 1200px){
     ion-grid {
         flex-direction: row;
